# ocilar-python

./: README.md  pyproject.toml
ocilar/: __init__.py  client.py
